--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 			<div class="about-text">
 				<p>Hello! I am Zechariah.</p>
 				<p>I just want to show you my abilities and progress for myself and my projects.</p>
-				<p>i am always trying to learn new things and constantly trying to improve my abilities in order to do a better job at making those who i am helping happy.</p>
+				<p>I am always trying to learn new things and constantly trying to improve my abilities in order to do a better job at making those who i am helping happy.</p>
 			</div>
 		</div>
 	</section>
