fixed html and css

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		  <li><a class="nav-link" href="#home">Home</a></li>
 		  <li><a class="nav-link" href="#about">About</a></li>
 		  <li><a class="nav-link" href="#skill">Skills</a></li>
-		  <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
+		  <li><a class="nav-link" href="#portfolio">Work</a></li>
 		  <li><a class="nav-link" href="#contact">Contact</a></li>
 		</ul>
 
@@ -78,7 +78,7 @@
 			<div class="about-text">
 				<p>Hello! I am Zechariah.</p>
 				<p>I just want to show you my abilities and progress for myself and my projects.</p>
-				<p>i am always trying to learn new things and constantly trying to improve my abilities in order to do a better job at making those who i am helping happy.</p>
+				<p>I am always trying to learn new things and constantly trying to improve my abilities in order to do a better job at making those who i am helping happy.</p>
 			</div>
 		</div>
 	</section>
@@ -127,28 +127,32 @@
 	</section>
 
 
-<!-- Portfolio -->
-	<section class="portfolio container" id="portfolio">
+<!-- Work -->
+<section class="portfolio container" id="portfolio">
 
-		<!-- Heading -->
-		<h2 class="heading"> Portfolio </h2> 
+	<!-- Heading -->
+	<h2 class="heading"> Work </h2> 
 
-	  
-	  <div class="gallery wow fadeInLeft">
-		<a href="placeholder">
-		  <img alt="project1" class="big" src="" />
-		</a>
-		<a href="placeholder">
-		  <img alt="project2" class="small" src="" />
-		</a>
-		<br class="clear" />
-		<a href="placeholder">
-		  <img alt="project3" class="small" src=""/>
-		</a>
-		<a href="placeholder">
-		<img alt="project4" class="big" src="" />
-		</a>
-		<br class="clear" />
+  
+  <div class="gallery wow fadeInLeft">
+	<a href="https://placeholder.com">
+	  <img alt="project1" class="big" src="https://via.placeholder.com/1200" />
+	</a>
+	<br class="clear">
+	<a href="https://placeholder.com">
+	  <img alt="project2" class="small" src="https://via.placeholder.com/600" />
+	</a>
+	<a href="https://placeholder.com">
+	  <img alt="project3" class="small" src="https://via.placeholder.com/600" />
+	</a>
+	<br class="clear">
+	<a href="https://placeholder.com">
+	  <img alt="project4" class="small" src="https://via.placeholder.com/600" />
+	</a>
+	<a href="https://placeholder.com">
+	  <img alt="project5" class="small" src="https://via.placeholder.com/600" />
+	</a>
+	<br class="clear">
 	  </div>
 	</section>
 
